--- a/simple notepad.css
+++ b/simple notepad.css
@@ -1,208 +1,127 @@
-body {
-    margin: 0px;
-    background-color: #000;
-}
- 
-#home {
-    position: relative;
-    width: 1440px;
-    height: 2203px;
-    background: #1F1F1F;
-}
- 
-header {
-    position: absolute;
-    left: 59px;
-    top: 0px;
-    box-sizing: border-box;
-    width: 1323px;
-    height: 130px;
+/* 
+1.Add font-family 
+2.Figure out sections need to be build individually
+    i. nav section
+    ii. Header section
+    iii. Catogiries cards
+    iv. Footer
+*/
+nav {
     display: flex;
-    align-items: center;
+    gap: 20px;
+    padding: 10px 20px;
     justify-content: space-between;
 }
-.navbar-brand {
-    height: 100%;
-    width: 15%;
-    font-size: 3rem;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
+nav > h1{
+    color: white ;
 }
- 
-.nav-search {
-    background: #262626;
-    border-radius: 15px;
-    width: 55%;
-    height: 53px;
-    padding: 5px 10px;
-    border: none;
-    color: #fff;
-    font-size: 1.5rem;
-}
- 
-.nav-btn {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    color: #FFFFFF;
-    background: #262626;
-    padding: 5px 20px; 
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-}
- 
-.centre-element {
+nav > div {
+    width: 80%;
     display: flex;
-    justify-content: center;
+    gap: 10px;
     align-items: center;
 }
- 
- 
-#category {
-    font-family: 'Open Sans', sans-serif;
-    box-sizing: border-box;
-    position: absolute;
-    width: 1323px;
-    height: 1050px;
-    left: 59px;
-    top: 813px;
-    padding: 1rem 4rem;
+nav  input , nav  button {
+    background-color: rgba(38, 38, 38, 1);
+    padding: 6px 20px;
+    border-radius: 10px;
 }
- 
- 
-#category > h2 {
-    height: 5%;
-    margin: 0;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 45px;
-    line-height: 68px;
-    color: #FFFFFF;
+nav input {
+    flex-grow: 1;
+    color: rgba(255, 255, 255, 0.2);
 }
- 
-.category-card-container {
-    box-sizing: border-box;
-    height: 95%;
-    padding: 2rem 0px;
+nav button {
+    color: white ;
+}
+.small-img {
+    width: 50px;
+}
+.large-img {
+    width: 150px;
+}
+.header-section {
+    margin: 20px 50px;
+    border-radius: 10px;
+    background-color:  rgba(38, 38, 38, 1);
+    padding: 20px;
+}
+.header-right{
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    height: auto;
+    flex-direction: column;
+    justify-content: space-between;
 }
- 
-.category-card-container .category-card {
-    box-sizing: border-box;
-    width: 346px;
-    height: 391px;
-    background: #1F1F1F;
-    border: 3px solid #262626;
+.header-left > .item {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin: 5px 0;
+}
+.header-container{
+    display: flex;
+    justify-content: space-between;
+}
+.header-right button {
+    background-color: #FECB03 ;
+    color: black;
+    padding: 10px;
+    align-self: center;
     border-radius: 20px;
-    margin: 1.8rem 10px;
-    padding: 1rem;
-    color: #fff;
 }
- 
-.category-card > div {
+
+.categories-section{
+    margin: 20px 50px;
+}
+
+.cards-container {
+    margin-top: 20px;
     display: flex;
-    align-items: center;
+    flex-flow: row wrap;
+    padding: 0 10px;
+    gap: 10px ;
 }
- 
-.category-card .category-card-heading {
-    width: 100%;
-    height: 20%;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 2rem;
-    line-height: 22px;
+.card {
+    width: 30%;
+    border: 2px solid rgba(38, 38, 38, 1) ;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    position:relative;
+    padding-bottom: 60px;
 }
- 
-.category-card .category-card-desc {
-    width: 100%;
-    height: 60%;
-    font-size: 18px;
-    line-height: 25px;
+.card > h3 , .card > p {
+    color :  rgba(255, 255, 255, 0.8);
 }
- 
-.category-card .category-card-btn {
-    width: 100%;
-    height: 20%;
-    justify-content: right;
+.card > p {
+    font-size: 12px;
 }
- 
-.category-card-btn > button {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 22px;
-    width: 169.44px;
-    height: 58px;
-    background: #FECB03;
-    border-radius: 50px;
-    border: none;
-    cursor: pointer;
-}
- 
-footer {
-    box-sizing: border-box;
+.card > button {
+    background-color: #FECB03;
+    color: black;
     position: absolute;
-    width: 1370px;
-    height: 283px;
-    left: 33px;
-    top: 1885px;
-    background: #262626;
-    border-radius: 30px;
-    padding: 1rem 3rem;
+    right: 7px;
+    bottom: 4px;
+    padding: 7px;
+    height: 30px;
+    border-radius: 15px;
+}
+
+footer{
     display: flex;
- 
-    font-family: 'Open Sans', sans-serif;
+    gap: 20px;
+    margin: 50px 50px;
+    justify-content: space-evenly;
+    background-color: rgba(38, 38, 38, 1);
+    padding: 10px;
+    border-radius: 10px;
 }
- 
-footer .footer-content {
-    width: 20%;
-    height: 100%;
-    margin-right: 3rem;
+
+footer > div {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
- 
-footer>div:nth-child(1) {
-    width: 50% ;
-}
- 
-.footer-content > p {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 27px;
+
+footer> div > a, footer p, footer h2 {
+    text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
-}
- 
-.footer-content > h2 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 45px;
-    line-height: 68px;
-    color: #FFFFFF;
-    margin: 10px 0px;
-}
- 
-.footer-content > h3 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 2rem;
-    line-height: 68px;
-    color: #FFFFFF;
-    margin: 10px 0px;
-}
- 
- 
-.footer-content .footer-links {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1rem;
-    color: #FFFFFF;
-    margin: 10px 0px;
-    cursor: pointer;
 }
